src/objects/RateBand__c.object
<CustomObject>
    <fields>
        <fullName>LowerLimit__c</fullName>
        <label>Lower Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate</label>
        <referenceTo>Rate__c</referenceTo>
        <relationshipLabel>Rate Bands</relationshipLabel>
        <relationshipName>RateBands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UpperLimit__c</fullName>
        <label>Upper Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rate Band</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rate Band Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Bands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>